@startuml SmartHome

class Device
class Sensor
class Actuator

Device <|-- Sensor
Sensor <|-- TemperatureSensor
Sensor <|-- LightSensor
Sensor <|-- MotionSensor
Sensor <|-- DoorSensor
Sensor <|-- HumiditySensor
Sensor <|-- WindowSensor
Sensor <|-- PollutionSensor

Device <|-- Actuator
Actuator <|-- Heater
Actuator <|-- Light
Actuator <|-- DoorLock
Actuator <|-- WindowMotor
Actuator <|-- AirPurifier
Actuator <|-- Alarm
Actuator <|-- AirConditioner

Sensor --> Environment
Actuator --> Environment

class Environment
class IObserver
class Observable

IObserver <|.. Sensor
IObserver <|.. Actuator
Observable <|-- Environment

Environment "1" *-- "*" IObserver : observers


class Room
Room "1" *-- "*" Sensor : sensors
Room "1" *-- "*" Actuator : actuators
Room "1" *-- "1" Environment : environment


class Logger
Logger --> Device
Logger --> Environment


class SmartHome
SmartHome "1" *-- "*" Room : rooms
SmartHome --> Logger

@enduml
